--- a/README.org
+++ b/README.org
@@ -93,7 +93,7 @@ Below operation flow is recommended.
 
 ** License
 #+begin_example
-  Affero General Public License Version 3 (AGPLv3)
+  General Public License Version 3 (GPLv3)
   Copyright (c) Naoya Yamashita - https://conao3.com
   https://github.com/conao3/leaf-convert.el/blob/master/LICENSE
 #+end_example
