frag :setq is supported

--- a/README.org
+++ b/README.org
@@ -91,7 +91,7 @@
   ;;    :global-minor-mode
   ;;    :diminish
   ;;    :delight
-  ;;    :setq
+  ;;    :setq                 ; supported!!
   ;;    :setq-default
   ;;    :pl-setq
   ;;    :auth-setq
