add :diminish, :delight convert rule

--- a/README.org
+++ b/README.org
@@ -89,8 +89,8 @@
   ;;    :leaf-defer
   ;;    :config
   ;;    :global-minor-mode
-  ;;    :diminish
-  ;;    :delight
+  ;;    :diminish             ; supported!!
+  ;;    :delight              ; supported!!
   ;;    :setq                 ; supported!!
   ;;    :setq-default         ; supoorted!!
   ;;    :pl-setq
