add :require conversion rule

--- a/README.org
+++ b/README.org
@@ -76,7 +76,7 @@
   ;;    :pl-custom
   ;;    :auth-custom
   ;;    :custom-face
-  ;;    :require
+  ;;    :require                ; supported!!
   ;;    :hydra
   ;;    :transient
   ;;    :combo
