add :bind conversion rule

--- a/README.org
+++ b/README.org
@@ -58,7 +58,7 @@
   ;;    :el-get
   ;;    :after
   ;;    :commands               ; supported!!
-  ;;    :bind
+  ;;    :bind                   ; supported!!
   ;;    :bind*
   ;;    :mode
   ;;    :interpreter
