--- a/README.org
+++ b/README.org
@@ -75,7 +75,7 @@
   ;;    :custom*                ; supported!!
   ;;    :pl-custom
   ;;    :auth-custom
-  ;;    :custom-face
+  ;;    :custom-face            ; supported!!
   ;;    :require                ; supported!!
   ;;    :hydra
   ;;    :transient
